--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,20 @@
   <body>
     <canvas id="canvas"></canvas>
 
+    <!-- <div class="editor"> -->
+    <!--   <div class="imports"></div> -->
+    <!--   <div class="actions"> -->
+    <!--     <button class="save">save</button> -->
+    <!--     <button class="save-fork">save as new type</button> -->
+    <!--   </div> -->
+
+    <!--   <div class="methods"></div> -->
+    <!-- </div> -->
+
     <script type="text/javascript" src="static/js/ext/zepto.min.js"></script>
     <script type="text/javascript" src="static/js/ext/box2d.js"></script>
     <script type="text/javascript"
-            data-main="static/js/main2.js"
+            data-main="static/js/main.js"
             src="static/js/ext/require.js"></script>
   </body>
 </html>
