--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
   </head>
   <body>
+    <div class="controls">
+      Arrow keys - move<br />
+      Space - jump
+    </div>
+
     <canvas id="canvas"></canvas>
 
     <script type="text/javascript" src="static/js/ext/zepto.min.js"></script>
