--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
   </head>
   <body>
+    <div class="controls">
+      Arrow keys - move<br />
+      Space - jump
+    </div>
+
     <canvas id="canvas"></canvas>
 
     <!-- <div class="editor"> -->
